tests/a/tests/integrity/fail/loop/for.2.stderr
error: expected {root}{root}, found {root}{b,c,root}
  --> tests/integrity/fail/loop/for.2.rs:13:17
   |
13 |             x = 1;
   |                 ^
